--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "body-parser": "^2.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "class-validator-jsonschema": "^5.1.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.3",
+    "routing-controllers-openapi": "^5.0.0",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typedi": "^0.10.0"
   },
@@ -32,6 +35,7 @@
     "@types/express": "^5.0.5",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.39.1",
