--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "class-validator-jsonschema": "^5.1.0",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.3",
     "routing-controllers-openapi": "^5.0.0",
@@ -39,12 +41,14 @@
     "@types/express": "^5.0.5",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "@types/pino-http": "^5.8.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "pino-http": "^11.0.0",
     "prettier": "^3.6.2",
     "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
