--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-validator": "^0.14.2",
     "class-validator-jsonschema": "^5.1.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
@@ -39,6 +40,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/pino-http": "^5.8.4",
