--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer": "^2.0.2",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
+    "redis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.3",
     "routing-controllers-openapi": "^5.0.0",
@@ -44,6 +45,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/pino-http": "^5.8.4",
+    "@types/redis": "^4.0.10",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
