--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:unit": "vitest run"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +38,7 @@
     "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "@testcontainers/postgresql": "^11.8.1",
     "@types/bcrypt": "^6.0.0",
     "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.5",
@@ -46,17 +47,23 @@
     "@types/node": "^24.10.1",
     "@types/pino-http": "^5.8.4",
     "@types/redis": "^4.0.10",
+    "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
+    "@vitest/coverage-v8": "^4.0.10",
+    "@vitest/ui": "^4.0.10",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "pino-http": "^11.0.0",
     "prettier": "^3.6.2",
     "prisma": "^6.19.0",
+    "supertest": "^7.1.4",
+    "testcontainers": "^11.8.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.10"
   }
 }
